--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<div class="page-lead" style="background-image:url(images/index/main_dark.jpeg)">
 		-->
 
-<div class="page-lead" style="background-image:url(https://anotherheader.files.wordpress.com/2008/11/etna-pano-1-crop-2.jpg)">
+<div class="page-lead" style="background-image:url(http://www.photovolcanica.com/VolcanoInfo/Nyamuragira/Nyamura2012_9197.JPG)">
       <div class="wrap page-lead-content">
         <h1>Indonesia Volcano Mapping</h1>
         <h2>Volunteer Data Creation</h2>
@@ -126,7 +126,6 @@
 					<div class="inline-btn">
 	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=&amp;url=/&amp;via=" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
 	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
-	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
 </div><!-- /.share-this -->
 					
 				</footer><!-- /.footer -->
