--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<div class="page-lead" style="background-image:url(images/index/main_dark.jpeg)">
 		-->
 
-<div class="page-lead" style="background-image:url(http://www.photovolcanica.com/VolcanoInfo/Nyamuragira/Nyamura2012_9197.JPG)">
+<div class="page-lead" style="background-image:url(http://www.airpano.ru/files/kamchatka_volcano_big.jpg)">
       <div class="wrap page-lead-content">
         <h1>Indonesia Volcano Mapping</h1>
         <h2>Volunteer Data Creation</h2>
