--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <ul class="menu-item">
 	<li class="home"><a href="/"></a></li>
     	<li><a href="/" >Home</a></li>
-    	<li><a href="/overview/" >Overview</a></li>
+    	<li><a href="/opendata/" >Open Data</a></li>
+    	<li><a href="/indonesia/" >Indonesia</a></li>
     	<li><a href="/guide/" >Guide</a></li>
 	</ul>
     </nav>
@@ -68,18 +69,21 @@
   </div>
    /.inner-wrap -->
 </header><!-- /.masthead -->
+    <!--
     <nav role="navigation" class="js-menu sliding-menu-content">
 	<ul class="menu-item">
 		<li>
-			<a href="/" class="title">Intro</a>
+			<a href="/" class="title">Home</a>
 		</li><li>
-			<a href="/overview/" class="title">Overview</a>
+			<a href="/opendata/" class="title">Open Data</a>
+		</li><li>
+			<a href="/indonesia/" class="title">Indonesia</a>
 		</li><li>
 			<a href="/guide/" class="title">Guide</a>
-			
 		</li>
 	</ul>
-</nav>
+     </nav>
+     -->
 <button type="button" class="js-menu-trigger sliding-menu-button menulines-button x2" role="button" aria-label="Toggle Navigation">
 	<span class="menulines"></span>
 </button>
