--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  <!-- 
  	<div class="inner-wrap">
  -->
-    <a href="http://www.usaid.gov/sites/all/themes/usaid/logo.png" class="site-title"></a>
+    <a href="/" img src="http://www.usaid.gov/sites/all/themes/usaid/logo.png" class="site-title"></a>
     <nav role="navigation" class="menu top-menu">
         <ul class="menu-item">
 	<li class="home"><a href="/"></a></li>
