--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@
 	</ul>
      </nav>
 
-<div class="js-menu-screen menu-screen"></div>   
--->
-
 <button type="button" class="js-menu-trigger sliding-menu-button menulines-button x2" role="button" aria-label="Toggle Navigation">
 	<span class="menulines"></span>
 </button>
 
+<div class="js-menu-screen menu-screen"></div>   
+-->
 
+<button type="button" role="button" aria-label="Toggle Navigation">
+</button>
 
        <div id="main" role="main">			
 <!--	<div class="wrap"> -->
