--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
  <!-- 
  	<div class="inner-wrap">
  -->
-    <a href="/" class="site-title"><img src="http://www.usaid.gov/sites/all/themes/usaid/logo.png"></a>
+    <img src="http://www.usaid.gov/sites/all/themes/usaid/logo.png">
+    <a href="/" class="site-title"></a>
     <nav role="navigation" class="menu top-menu">
         <ul class="menu-item">
 	<li class="home"><a href="/"></a></li>
@@ -90,9 +91,6 @@
 
 <div class="js-menu-screen menu-screen"></div>   
 -->
-
-<button type="button" role="button" aria-label="Toggle Navigation">
-</button>
 
        <div id="main" role="main">			
 <!--	<div class="wrap"> -->
