--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <body>
  <header id="masthead">
-    <a href="/" class="site-title"></a>
+    <a href="/" class="site-title"><img src="http://www.usaid.gov/sites/all/themes/usaid/logo.png"></a>
     <nav role="navigation" class="menu top-menu">
         <ul class="menu-item">
 	<li class="home"><a href="/"></a></li>
@@ -62,7 +62,7 @@
     	<li><a href="/guide/" >Guide</a></li>
 	</ul>
     </nav>
-    <img src="http://www.usaid.gov/sites/all/themes/usaid/logo.png">
+    
     <!--
   </div>
    /.inner-wrap -->
