--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <body>
  <header id="masthead">
-    <a href="/" class="site-title"><img src="http://www.usaid.gov/sites/all/themes/usaid/logo.png"></a>
+    <div class="site-title"><img src="http://www.usaid.gov/sites/all/themes/usaid/logo.png"></div>
     <nav role="navigation" class="menu top-menu">
         <ul class="menu-item">
 	<li class="home"><a href="/"></a></li>
