--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         -->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
-<div class="page-content">
+<div id="content">
 	<p>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
 	risk posed by volcanic hazards. This problem is especially evident in Indonesia. Kediri, a town 19 miles to the West 
 	of Mount Kelud in East Java, was evacuated earlier this year when threatened by Kelud’s February (2014) eruption. 
