--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         -->
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
-<div id="page-wrapper">
-	<p>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
+<div id="content">
+	<p color:black>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
 	risk posed by volcanic hazards. This problem is especially evident in Indonesia. Kediri, a town 19 miles to the West 
 	of Mount Kelud in East Java, was evacuated earlier this year when threatened by Kelud’s February (2014) eruption. 
 	Despite this, virtually no effort has been made to map the surrounding communities.</p>
