--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       -o-transform: translateX(100%);
       transform: translateX(100%);
     }
+    h3 {
+    color: #000000;
+    text align: left;
+    }
     </style>
 
     <link rel="stylesheet" href="/css/main.css">
@@ -117,10 +121,10 @@
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
 <div id="content">
-	<p color:black>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
+	<h3>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
 	risk posed by volcanic hazards. This problem is especially evident in Indonesia. Kediri, a town 19 miles to the West 
 	of Mount Kelud in East Java, was evacuated earlier this year when threatened by Kelud’s February (2014) eruption. 
-	Despite this, virtually no effort has been made to map the surrounding communities.</p>
+	Despite this, virtually no effort has been made to map the surrounding communities.</h3>
 </div>
 <!-- /.tile -->
 
