--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       -o-transform: translateX(100%);
       transform: translateX(100%);
     }
-    h3 {
-    color: #000000;
-    text align: left;
+    h4 {
+    color: 494949;
+    text-align: left;
     }
     </style>
 
@@ -121,10 +121,10 @@
       </div><!-- /.page-lead-content -->
     </div><!-- /.page-lead -->
 <div id="content">
-	<h3>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
+	<h4>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
 	risk posed by volcanic hazards. This problem is especially evident in Indonesia. Kediri, a town 19 miles to the West 
 	of Mount Kelud in East Java, was evacuated earlier this year when threatened by Kelud’s February (2014) eruption. 
-	Despite this, virtually no effort has been made to map the surrounding communities.</h3>
+	Despite this, virtually no effort has been made to map the surrounding communities.</h4>
 </div>
 <!-- /.tile -->
 
