--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       transform: translateX(100%);
     }
     h4 {
-    color: 494949;
+    color: #494949;
     text-align: left;
     }
     </style>
