--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       transform: translateX(100%);
     }
     p {
-    color: #494949;
+    	color: #494949;
+    }
+    content {
+    	width: 70%;
     }
     </style>
 
