--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
      <!--[if lt IE 9]><div class="upgrade notice-danger"><strong>Your browser is quite old!</strong> Why not <a href="http://whatbrowser.org/">upgrade to a newer one</a> to better enjoy this site?</div><![endif]-->
 	<p>Many active volcanoes lack open data about the infrastructure surrounding them, making it difficult to determine 
 	risk posed by volcanic hazards. This problem is especially evident in Indonesia. Since 1980, approximately 300,000 
-	Indonesians have been affected at a cost of $160 million USD.</p>
+	Indonesians have been affected at a cost of $160 million USD. Kediri, a town 19 miles to the Westof Mount Kelud in
+	East Java, was evacuated earlier this year when threatened by Kelud’s February (2014) eruption.</p>
 	
-	<p>Kediri, a town 19 miles to the Westof Mount Kelud in East Java, was evacuated earlier this year when threatened by 
-	Kelud’s February (2014) eruption.Despite this, virtually no effort has been made to map the surrounding communities.</p>
+	<p>Despite this, virtually no effort has been made to map the surrounding communities.</p>
 
 <hr />
 <!--<div class="tiles">
