changes around few file names

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <ul class="menu-item">
 	<li class="home"><a href="/"></a></li>
     	<li><a href="/" >Home</a></li>
-    	<li><a href="/opendata/" >Open Data</a></li>
-    	<li><a href="/indonesia/" >Indonesia</a></li>
+    	<li><a href="/problem/" >Problem</a></li>
+    	<li><a href="/plan/" >Plan</a></li>
     	<li><a href="/guide/" >Guide</a></li>
 	</ul>
     </nav>
