tries to add background image

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="page-lead" style="background-image:url(images/index/main_dark.jpeg)">
 		-->
 
-<div class="page-lead" style="background-image:url()">
+<div class="page-lead" style="background-image:url({{site.url}}/images/header-bg.jpg)>
       <div class="wrap page-lead-content">
         <h1>Living Garden Alliance</h1>
         <h2>Enhancing Shared Space</h2>
